# islamopedia-books

./: .env  .env.example  .firebaserc  .gitignore  Dockerfile  Makefile  README.md  firebase.json  index.html  pyproject.toml
.github/workflows/: build-books.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.vscodesettings.json/: settings.json
books/Feature al_bidaya_wa_nihaya_vol_1/content/: chap_10.md  chap_5.md  chap_9.md
books/al_bidaya_wa_nihaya_vol_1/: _config.yml  _toc.yml
books/al_bidaya_wa_nihaya_vol_2/: _config.yml  _toc.yml
books/al_bidaya_wa_nihaya_vol_3/: _toc.yml
books/al_bidaya_wa_nihaya_vol_4/: _config.yml  _toc.yml
books/template_book/: _config.yml  _toc.yml
docs/: directory-structuring.md  local-setup.md
helper_tool/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  rag-with-ollama.py
helper_tool/docs/: audio-generation-instructions.md
helper_tool/services/: generate_11_lab_audio.py  generate_audio_service.py  pdf_text_extractor.py
helper_tool/static/: styles.css
helper_tool/templates/: combine_texts.html  extract_text.html  generate_audio.html  generate_elevenlabs_audio.html  index.html
scripts/: build_all_books.sh  build_books.sh  process_pdf.py
scripts/text_extractor/: README.md  pdf_text_extractor.py  requirments.txt
scripts/text_extractor_from_images/: README.md  pdf_text_extractor.py  requirments.txt
static/: index.html
template_book/: _config.yml  chap_1.md
text_files_folder/: range_162_166.md  range_178_255.md  range_2_8.md  range_89_97.md
(+93 files in other folders)
