[tool.poetry]
name = "islamopedia-books"
version = "0.1.0"
description = "The project is a collection of books on Islam."
authors = ["Gul Shair Butt <segullshairbutt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^1.0.2"
pyppeteer = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
